--- a/estilos.css
+++ b/estilos.css
@@ -1,116 +1,188 @@
-header{
+header {
     display: flex;
     background-color: rgb(255, 255, 255);
     justify-content: space-between;
     padding: 10px;
     align-items: center;
 }
-header a{
+
+header a {
     text-decoration: none;
     color: rgb(19, 78, 157);
     font-weight: bold;
 }
 
-header a:hover{
+header a:hover {
     color: rgb(249, 140, 140);
 }
 
-.logo img{
-    height: 80px;    
+.logo img {
+    height: 80px;
 }
 
-#cuadrante{
+#cuadrantepadre {
+    align-self: center;
+}
+
+#cuadrante {
     align-items: center;
     color: rgb(255, 255, 255);
 }
 
-#experiencias{
+#cuadrante h1 {
+    padding-left: 20px;
+}
+
+#experiencias {
     border-right: 4px solid rgb(19, 78, 157);
     border-left: 4px solid rgb(19, 78, 157);
 }
 
-.dropdown{
+.buscador {
+    display: flex;
+}
+
+.dropdown {
     margin-right: 20px;
     align-items: center;
 }
 
-.lupa{
+.lupa {
     height: 40px;
     margin-right: 30px;
 }
 
-.carrito img{
+.carrito img {
     height: 30px;
     margin-left: 15px;
 }
 
-.jumbotron{
+.jumbotron {
     display: flex;
     background-color: rgb(249, 140, 140);
 }
 
-.jumbotron h1{
+.jumbotron h1 {
     font-style: italic;
     color: aliceblue;
     padding: 1%;
 }
 
-.blog{
-margin-right: 80px;
-margin-left: 20px;
+.blog {
+    margin-right: 80px;
+    margin-left: 20px;
 }
 
-.blog h2{
+main h2 {
     font-style: italic;
-    padding-top:  20px;
+    padding-top: 20px;
     color: rgb(19, 78, 157);
 }
 
-.grid{
-    display: grid;
-    background-color: rgb(255, 255, 255);
-    grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
-    height: 800px;
-    gap: 20px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+main h6 {
+    color: rgb(19, 78, 157);
 }
 
-.grid div{
+.grid {
+    display: grid;
+    background-color: rgb(255, 255, 255);
+    grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
+    gap: 20px;
+    place-items: center;
+    padding-left: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+
+}
+
+.grid article {
     background-color: rgb(211, 211, 211);
     border-radius: 20px;
     color: rgb(19, 78, 157);
-    
+
 }
 
-.blog img{
-    max-width: 298px;
+.grid h6 {
+    margin-left: 20px;
+    font-weight: 400;
+}
+
+.grid .comprar {
+    display: flex;
+    background-color: rgb(19, 78, 157);
+    justify-content: space-between;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    color: rgb(255, 255, 255);
+    font-weight: 500;
+}
+
+.grid h7 {
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+main ul li {
+    display: flex;
+    align-items: center;
+}
+
+main ul li h3 {
+    margin-right: 10px;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    color: rgb(255, 255, 255);
+    background-color: rgb(145, 145, 145);
+}
+
+.blog img {
+    width: 298px;
     border-radius: 20px;
+    object-fit: cover;
 }
 
-footer{
+.logosrrss img {
+    width: 50px;
+    padding-right: 10px;
+    padding-top: 10px;
+}
+
+footer {
     background-color: rgb(19, 78, 157);
 }
 
-.logofooter{
+.logofooter {
     height: 100px;
 }
 
-@media (max-width:900px){
-    header{
+@media (max-width:900px) {
+    header {
         flex-direction: column;
     }
-    nav{
+
+    nav {
         padding: 10px 0px;
     }
-    .d-flex{
+
+    .d-flex {
         margin-top: 10px;
     }
-    .dropdown{
+
+    .dropdown {
         margin-top: 15px;
     }
-    #experiencias{
+
+    #experiencias {
         border-right: none;
         border-left: none;
+    }
+}
+
+@media (max-width:570px) {
+    .buscador {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 }
