--- a/estilos.css
+++ b/estilos.css
@@ -24,7 +24,7 @@ header a:hover {
     align-self: center;
 }
 
-#cuadrante {
+.cuadrante {
     align-items: center;
     color: rgb(255, 255, 255);
 }
@@ -68,11 +68,6 @@ header a:hover {
     padding: 1%;
 }
 
-.blog {
-    margin-right: 80px;
-    margin-left: 20px;
-}
-
 main h2 {
     font-style: italic;
     padding-top: 20px;
@@ -89,9 +84,7 @@ main h6 {
     grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
     gap: 20px;
     place-items: center;
-    padding-left: 20px;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding: 20px;
 
 }
 
@@ -99,22 +92,22 @@ main h6 {
     background-color: rgb(211, 211, 211);
     border-radius: 20px;
     color: rgb(19, 78, 157);
+    overflow: hidden;
 
 }
 
 .grid h6 {
-    margin-left: 20px;
     font-weight: 400;
+    margin: 16px;
 }
 
 .grid .comprar {
     display: flex;
     background-color: rgb(19, 78, 157);
     justify-content: space-between;
-    border-bottom-right-radius: 20px;
-    border-bottom-left-radius: 20px;
     color: rgb(255, 255, 255);
     font-weight: 500;
+    padding: 8px;
 }
 
 .grid h7 {
@@ -127,18 +120,18 @@ main ul li {
     align-items: center;
 }
 
-main ul li h3 {
+main ul li div {
     margin-right: 10px;
-    width: 25px;
-    height: 25px;
+    min-width: 25px;
+    min-height: 25px;
     border-radius: 50%;
     color: rgb(255, 255, 255);
     background-color: rgb(145, 145, 145);
+    font-weight: 500;
 }
 
 .blog img {
-    width: 298px;
-    border-radius: 20px;
+    width: 100%;
     object-fit: cover;
 }
 
@@ -155,6 +148,15 @@ footer {
 .logofooter {
     height: 100px;
 }
+
+.adicionales {
+    padding-bottom: 24px;
+}
+
+footer .h6{
+    margin-top: 15px;
+}
+
 
 @media (max-width:900px) {
     header {
